--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -57,11 +57,14 @@ body,html{
     body {
         padding-top: env(safe-area-inset-top)!important;
         // overflow-y: auto !important;
-        overflow-y: scroll !important;
+        // overflow-y: scroll !important;
         min-height: 100vh!important;
-        height:100%;
-
     }
+    /* Optional: If needed for better scrolling */
+  .main-wrapper {
+    overflow-y: auto;  /* Allows content to scroll properly */
+    -webkit-overflow-scrolling: touch; /* Improves touch scrolling */
+   }
   //   .navbar {
   //     position: sticky !important;
   //     top: 0;
