--- a/assets/scss/pages/_product-development.scss
+++ b/assets/scss/pages/_product-development.scss
@@ -4,8 +4,8 @@
 /* Main Section */
 .product-development {
     background: linear-gradient(to bottom, white, rgb(255, 199, 199));
-    // border-bottom-left-radius: 50%;
-    // border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
     padding: 100px 0;
     display:flex;
     flex-flow:column nowrap;
@@ -41,7 +41,7 @@
 }
 
 .product-development__image {
-    width:290px;
+    width:270px;
     height:350px;
     border-radius: 10px;
    position:relative;
@@ -82,7 +82,7 @@
 
 .product-development__feature--one {
     top: 50px;
-    left: -40px;
+    left: -100px;
     background:func.theme-colors('primary-hover');
     position:absolute;
 }
@@ -109,7 +109,7 @@
 }
 .product-development__feature--three {
     top: 250px;
-    left: -30px;
+    left: -70px;
     background:func.theme-colors('orange');
 }
 .product-development__feature--three h6{
